[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cleansweep"
authors = [{name = "Marco Teixeira", email = "mcarvalh@broadinstitute.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.scripts]
cleansweep = "cleansweep.main:main"

[project.urls]
Home = "https://github.com/marcoteix/cleansweep"
