[package]
name = "cleansweep_mcmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cleansweep_mcmc"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
pyo3 = "0.25.0"
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
statrs = "0.18.0"
